--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Compass</string>
-    <string name="heading">Heading: 0</string>
+    <string name="heading">0°</string>
+    <string name="magnet">49uT</string>
+    <string name="calibration">Twist phone in a figure 8 motion.</string>
 </resources>
